Bug 341856 - Activity switch shortcuts like Meta+Q or Meta+Tab don't work in Plasma 5
Summary: Activity switch shortcuts like Meta+Q or Meta+Tab don't work in Plasma 5
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activity Switcher sidebar (other bugs)
Version First Reported In: 5.1.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-13 19:59 UTC by Sudhir Khanger
Modified: 2014-12-15 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Settings screenshot from KDE 4 (74.86 KB, image/png)
2014-12-15 11:26 UTC, Sudhir Khanger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sudhir Khanger 2014-12-13 19:59:15 UTC
KDE 4 has a few shortcuts to work with Activities.

Meta+Q opens the Activity switcher widget and shows all activities.
Meta+Tab can be used just like how you using Alt+Tab for windows. To shuffle through all the activites.

Both of these shortcuts don't work in Plasma 5. SystemSettings>Shortcut doesn't have any option for these to be manually configures.

Reproducible: Always

Steps to Reproduce:
1. Press Meta+Q or Meta+Tab or Alt+D, Alt+A
2. See if you activity switcher opens or activities are switched.
3.

Actual Results:  
Shortcuts don't work

Expected Results:  
Meta+Q should show all activities.
Meta+Tab should be able to switch to next activity.
Meta+Shift+Tab should be able to switch to previous activity.
Comment 1 Sudhir Khanger 2014-12-15 11:26:46 UTC
Created attachment 89980 [details]
Settings screenshot from KDE 4

These are the settings missing in Plasma 5.
Comment 2 Bhushan Shah 2014-12-15 16:15:29 UTC
Git commit 037dbf3ca8da09cabfd0c7e60e322153e6cb75e8 by Bhushan Shah.
Committed on 15/12/2014 at 16:15.
Pushed by bshah into branch 'master'.

Register shortcuts for activities management
REVIEW: 121533

M  +73   -4    shell/shellcorona.cpp
M  +4    -0    shell/shellcorona.h

http://commits.kde.org/plasma-workspace/037dbf3ca8da09cabfd0c7e60e322153e6cb75e8