Register shortcuts for activities management

BUG: 341856
REVIEW: 121533